refactor: set java source compatibility to 11
Signed-off-by: Markus <28785953+MarkusJx@users.noreply.github.com>